--- a/src/App.module.css
+++ b/src/App.module.css
@@ -41,7 +41,7 @@ a:hover {
 }
 
 a:hover i {
-  color: #242a3d;
+  color: #555555;
   transition: color ease-in-out 0.3s;
 }
 
@@ -50,16 +50,14 @@ input[type="file"] {
 }
 
 i {
-  color: #cfced3;
+  color: #bababa;
   font-size: 1.6rem;
   padding: 7px;
   vertical-align: middle;
 }
 
-i:hover {
-  cursor: pointer;
-  transition: color ease-in-out 0.3s;
-  color: #242a3d;
+a i {
+  color: #cfced3;
 }
 
 figure {
