--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -1,4 +1,12 @@
 .ProfileImage {
-  max-height: 350px;
-  margin: auto;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 576px) {
+  .ProfileImage {
+    width: 250px;
+    height: 250px;
+  }
 }
